# ham-radio-toolbox

./: .coveragerc  .gitignore  README.md  logging.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: delete-old-runs.yml  lint-and-test.yml
config/: config.yml
data/input/: three_letter_words.txt  two_letter_words.txt
data/input/ca/advanced/: categories.txt
data/input/ca/basic/: categories.txt
scripts/: run_checks.sh
src/: __init__.py  hamradiotoolbox.py
src/common/: config_reader.py  constants.py  enums.py  hrt_types.py  question_category.py  question_display.py  question_metric.py  question_ref.py  utils.py
src/downloaders/: base_downloader.py
src/hrt/common/: config_reader.py  constants.py  enums.py  hrt_types.py  question.py  question_bank.py  question_category.py  question_display.py  question_metric.py  question_ref.py  question_submitted.py  quiz.py  utils.py
src/hrt/downloaders/: base_downloader.py  ca_downloader.py  us_downloader.py
src/hrt/processors/: base_processor.py  callsign_processor.py  country_processor.py  question_processor.py  quiz_processor.py
src/hrt/question_banks/: ca_question_bank.py  ca_quiz.py  us_question_bank.py  us_quiz.py
src/hrt/scrapers/: base_scraper.py  ca_scraper.py  us_scraper.py
src/hrt/scrappers/: base_scrapper.py  ca_scrapper.py  us_scrapper.py
src/scrappers/: base_scrapper.py
tests/hrt/common/: test_config_reader.py  test_enums.py  test_question.py  test_question_bank.py  test_question_bank_factory.py  test_question_bank_properties.py  test_question_category.py  test_question_display.py  test_question_metric.py  test_question_ref.py  test_question_submitted.py  test_quiz.py  test_utils.py
tests/hrt/downloaders/: test_base_downloader.py  test_ca_downloader.py  test_us_downloader.py
tests/hrt/processors/: test_base_processor.py  test_callsign_processor.py  test_country_processor.py  test_question_processor.py  test_quiz_processor.py
tests/hrt/question_banks/: test_ca_question_bank.py  test_ca_quiz.py  test_us_question_bank.py  test_us_quiz.py
tests/hrt/scrapers/: test_base_scraper.py  test_ca_scraper.py  test_us_scraper.py
