[project]
name = "ham-radio-toolbox"
version = "0.1.0"
description = "A CLI tool to support the amateur radio community."
license = { file = "LICENSE", text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests~=2.32.3",
    "webdriver-manager~=4.0.2",
    "selenium~=4.26.1",
    "pyyaml~=6.0.1",
    "click~=8.0.3",
    "pytest~=8.2.1",
]

[tool.ruff]
line-length = 99
src = [
    "src",
    "tests",
    "main.py",
    "setup.py",
]

[tool.ruff.lint]
select = [
    "E", # General syntax and code style rules
    "F", # Pyflakes rules for unused imports, undefined names
    "I", # isort rules for imports ordering
    "TYP", # Type hinting rules
    "N", # Naming conventions
    "B", # Best practice rules
    "D", # Docstring conventions
    "SIM", # Simplifications and code smell checks
    "ERA", # Eradicate rules for unused/dead code
    "C", # Complexity rules
    "W", # Warnings
    "R", # Refactoring opportunities
]
exclude = ["tests/*", "build/*", "dist/*", "*.txt"]
ignore = ["D"]

[tool.ruff.lint.pycodestyle]
max-line-length = 99

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72


[tool.codespell]
skip = [
    "pyproject.toml", "LICENSE", "*.txt",
]
ignore-words = [
  "pyproject",
  "toml",
]
write-changes = true

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pylint]
disable = "C0415"