[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
name = "hamradiotoolbox"
version = "0.1.0"
packages = ["hrt"]

[project]
name = "hamradiotoolbox"
version = "0.1.0"
description = "A CLI tool to support the amateur radio community."
authors = [
    {name = "Phani K", email = "192951055+phani-kb@users.noreply.github.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ham radio", "amateur radio", "cli", "toolbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
    "Environment :: Console",
]
dependencies = [
    "requests~=2.32.3",
    "webdriver-manager~=4.0.2",
    "selenium~=4.26.1",
    "pyyaml~=6.0.1",
    "click~=8.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2.1",
    "pytest-cov",
    "ruff",
    "mypy",
    "coverage",
]

[project.scripts]
hamradiotoolbox = "hamradiotoolbox:hamradiotoolbox"
hrt = "hamradiotoolbox:hamradiotoolbox"

[project.urls]
Homepage = "https://github.com/phani-kb/ham-radio-toolbox"
Repository = "https://github.com/phani-kb/ham-radio-toolbox"
Issues = "https://github.com/phani-kb/ham-radio-toolbox/issues"

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E", # General syntax and code style rules
    "F", # Pyflakes rules for unused imports, undefined names
    "I", # isort rules for imports ordering
    "TYP", # Type hinting rules
    "N", # Naming conventions
    "B", # Best practice rules
    "D", # Docstring conventions
    "SIM", # Simplifications and code smell checks
    "ERA", # Eradicate rules for unused/dead code
    "C", # Complexity rules
    "W", # Warnings
    "R", # Refactoring opportunities
]
exclude = ["tests/*", "build/*", "dist/*", "*.txt"]
ignore = ["D"]

[tool.ruff.lint.pycodestyle]
max-line-length = 99

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.codespell]
skip = [
    "pyproject.toml", "LICENSE", "*.txt",
]
ignore-words = [
  "pyproject",
  "toml",
]
write-changes = true

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pylint]
disable = "C0415, W0718"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "@abstractmethod",
    "if TYPE_CHECKING:"
]
ignore_errors = true

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["hamradiotoolbox"]

[tool.setuptools.packages]
find = {where = ["src"], include = ["hrt*"], exclude = ["tests*"]}

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.txt"]

